--- a/src/components/CheckoutProduct.css
+++ b/src/components/CheckoutProduct.css
@@ -18,6 +18,7 @@
     border-color: #a88734 #9c7e31 #846a29;
     font-weight: 600;
     border-radius: 2px;
+    margin-top: 10px
 }
 
 .checkout__productImage {
