--- a/src/components/CheckoutProduct.css
+++ b/src/components/CheckoutProduct.css
@@ -1,6 +1,7 @@
 .checkout__product {
     display: flex;
     margin: 20px 0 20px 0;
+    color: black;
 }
 
 .checkout__productInfo {
@@ -18,7 +19,8 @@
     border-color: #a88734 #9c7e31 #846a29;
     font-weight: 600;
     border-radius: 2px;
-    margin-top: 10px
+    margin-top: 10px;
+    color: black;
 }
 
 .checkout__productImage {
