--- a/src/components/Product.css
+++ b/src/components/Product.css
@@ -10,6 +10,7 @@
     margin: 10px;
     padding: 20px;
     width: 100%;
+    color: black;
 }
 
 .product__rating {
@@ -28,6 +29,7 @@
     border: 1px solid;
     border-color: #a88734 #9c7e31 #846a29;
     font-weight: 600;
+    color: black;
 }
 
 .product__info {
