--- a/src/components/AddProduct.css
+++ b/src/components/AddProduct.css
@@ -1,3 +1,12 @@
+.sellerPage {
+    display: flex;
+    margin-top: 20px;
+}
+
+.child {
+    flex: 0.8;
+}
+
 .add__product {
     color: black;
 }
@@ -11,12 +20,12 @@
 }
 
 .addProduct__container {
-    margin: 20px auto;
+    margin:0 10px 0 10px;
     background-color: white;
     padding: 10px 20px;
     border-radius: 5px;
-    align-items: center;
     width: 300px;
+    flex: 0.2;
     height: fit-content;
 }
 
